--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -3,9 +3,9 @@
     <br><br><br>
      <div class="f-info">
         <div class="f-info-socials">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <i  href="https://www.facebook.com/tanmay.joshi.1029770" class="fa-brands fa-facebook"></i>
+            <i  href="https://www.instagram.com/" class="fa-brands fa-instagram"></i>
+            <i href="https://www.linkedin.com/in/tanmay-joshi-b35b39330/" class="fa-brands fa-linkedin"></i>
         </div>
         <div class="f-info-brand"> &copy; Wanderlust Private limited</div>
         <div class="f-info-links">
