Added new feature to homepage

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -3,9 +3,18 @@
     <br><br><br>
      <div class="f-info">
         <div class="f-info-socials">
-            <i  href="https://www.facebook.com/tanmay.joshi.1029770" class="fa-brands fa-facebook"></i>
-            <i  href="https://www.instagram.com/" class="fa-brands fa-instagram"></i>
-            <i href="https://www.linkedin.com/in/tanmay-joshi-b35b39330/" class="fa-brands fa-linkedin"></i>
+            <a href="https://www.facebook.com/tanmay.joshi.1029770">
+                <i   class="fa-brands fa-facebook"></i>
+            </a>
+            <a  href="https://www.instagram.com/">
+                 <i  class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/tanmay-joshi-b35b39330/">
+                  <i  class="fa-brands fa-linkedin"></i>
+            </a>
+            
+           
+          
         </div>
         <div class="f-info-brand"> &copy; Wanderlust Private limited</div>
         <div class="f-info-links">
